--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yellowstone National Park</title>
-    <link rel="stylesheet" href="./css/style.css" />
-    <script src="./js/main.js" type="module"></script>
+        <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/hero.css" />
   </head>
   <body>
     <p class="disclaimer">
-      This is a student project and not affiliated with the official National Park Service. Please visit
-      <a href="https://www.nps.gov/yell/" target="_blank" rel="noopener">www.nps.gov/yell</a>
-      for official information.
+      This is not a real NPS website. It is an educational exercise. If you landed here by accident, to find the real website visit 
+      <a href="https://www.nps.gov/yell/" target="_blank" rel="noopener">Yellowstone National Park</a>
     </p>
 
     <div class="skip-links" aria-label="shortcut links" role="navigation">
@@ -27,7 +26,7 @@
           <!-- Logo -->
           <a href="https://www.nps.gov/" class="global-header__logo">
             <svg class="icon">
-              <use xlink:href="/images/sprite.symbol.svg#nps-logo"></use>
+              <use xlink:href="./images/sprite.symbol.svg#nps-logo"></use>
             </svg>
           </a>
           
@@ -38,7 +37,7 @@
               <input type="text" id="global-search" placeholder="Enter search terms">
               <button type="submit">
                 <svg class="icon">
-                  <use xlink:href="/images/sprite.symbol.svg#search"></use>
+                  <use xlink:href="./images/sprite.symbol.svg#search"></use>
                 </svg>
                 Search
               </button>
@@ -49,7 +48,7 @@
           <div class="global-header__menu">
             <button class="menu-button">
               <svg class="icon">
-                <use xlink:href="/images/sprite.symbol.svg#menu"></use>
+                <use xlink:href="./images/sprite.symbol.svg#bars-square"></use>
               </svg>
               Menu
             </button>
@@ -80,12 +79,70 @@
           </div>
         </div>
       </section>
+
+      <!-- Park Navigation -->
+      <nav class="park-nav">
+        <ul class="park-nav__list">
+          <li>
+            <a href="#info">
+              <svg class="icon" aria-hidden="true">
+                <use xlink:href="./images/sprite.symbol.svg#info"></use>
+              </svg>
+              Info
+            </a>
+          </li>
+          <li>
+            <a href="#alerts">
+              <svg class="icon" aria-hidden="true">
+                <use xlink:href="./images/sprite.symbol.svg#alert"></use>
+              </svg>
+              Alerts
+            </a>
+          </li>
+          <li>
+            <a href="#maps">
+              <svg class="icon" aria-hidden="true">
+                <use xlink:href="./images/sprite.symbol.svg#bars-square"></use>
+              </svg>
+              Maps
+            </a>
+          </li>
+          <li>
+            <a href="#calendar">
+              <svg class="icon" aria-hidden="true">
+                <use xlink:href="./images/sprite.symbol.svg#calendar"></use>
+              </svg>
+              Calendar
+            </a>
+          </li>
+          <li>
+            <a href="#fees">
+              <svg class="icon" aria-hidden="true">
+                <use xlink:href="./images/sprite.symbol.svg#money-square"></use>
+              </svg>
+              Fees
+            </a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <main id="main">
-      </main>
+      <div class="main-content">
+        <section class="intro">
+          <!-- Park title and description will be inserted here -->
+        </section>
+        <section class="info">
+          <!-- Park info cards will be inserted here -->
+        </section>
+      </div>
+    </main>
 
-    <footer id="park-footer">
-      </footer>
+    <footer id="park-footer" class="park-footer">
+      <div class="contact">
+        <!-- Contact info will be inserted here -->
+      </div>
+    </footer>
+    <script src="./js/main.js" type="module"></script>
   </body>
 </html>
