--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,77 @@
               </div>
             </li>
           </ul>
+          <h2 class="global-nav__section-heading section-heading--blue">Explore the National Park Service</h2>
+          <ul class="global-nav__list">
+            <li>
+              <div class="global-nav__split-button">
+                <a href="#">Plan Your Visit</a>
+                <button class="global-nav__split-button__toggle">
+                  <span class="visually-hidden">Toggle submenu for Plan Your Visit</span>
+                  <svg class="icon" role="presentation" focusable="false">
+                    <use xlink:href="./images/sprite.symbol.svg#arrow"></use>
+                  </svg>
+                </button>
+              </div>
+              <ul class="global-nav__submenu" aria-label="Plan Your Visit submenu">
+                <li><a href="#">Find a Park</a></li>
+                <li><a href="#">Events</a></li>
+                <li><a href="#">Passes</a></li>
+                <li><a href="#">Trip Ideas</a></li>
+              </ul>
+            </li>
+            <li>
+              <div class="global-nav__split-button">
+                <a href="#">Learn About the Park</a>
+                <button class="global-nav__split-button__toggle">
+                  <span class="visually-hidden">Toggle submenu for Learn About the Park</span>
+                  <svg class="icon" role="presentation" focusable="false">
+                    <use xlink:href="./images/sprite.symbol.svg#arrow"></use>
+                  </svg>
+                </button>
+              </div>
+              <ul class="global-nav__submenu" aria-label="Learn About the Park submenu">
+                <li><a href="#">History & Culture</a></li>
+                <li><a href="#">People</a></li>
+                <li><a href="#">Places</a></li>
+                <li><a href="#">Science & Research</a></li>
+              </ul>
+            </li>
+            <li>
+              <div class="global-nav__split-button">
+                <a href="#">Get Involved</a>
+                <button class="global-nav__split-button__toggle">
+                  <span class="visually-hidden">Toggle submenu for Get Involved</span>
+                  <svg class="icon" role="presentation" focusable="false">
+                    <use xlink:href="./images/sprite.symbol.svg#arrow"></use>
+                  </svg>
+                </button>
+              </div>
+              <ul class="global-nav__submenu" aria-label="Get Involved submenu">
+                <li><a href="#">Volunteer</a></li>
+                <li><a href="#">Donate</a></li>
+                <li><a href="#">Support Your Park</a></li>
+                <li><a href="#">Partner With Us</a></li>
+              </ul>
+            </li>
+            <li>
+              <div class="global-nav__split-button">
+                <a href="#">About Us</a>
+                <button class="global-nav__split-button__toggle">
+                  <span class="visually-hidden">Toggle submenu for About Us</span>
+                  <svg class="icon" role="presentation" focusable="false">
+                    <use xlink:href="./images/sprite.symbol.svg#arrow"></use>
+                  </svg>
+                </button>
+              </div>
+              <ul class="global-nav__submenu" aria-label="About Us submenu">
+                <li><a href="#">Mission & History</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">News</a></li>
+              </ul>
+            </li>
+          </ul>
         </nav>
       </section>
 
